<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".FormActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/text_image_description"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_my_form"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView_my_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/text_my_form"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/text_hint_name"
        android:maxLength="20"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edtLastName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/text_hint_lastname"
        android:importantForAutofill="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:entries="@array/genders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLastName" />

    <RadioGroup
        android:id="@+id/rdDegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLastName">

        <RadioButton
            android:id="@+id/Trunco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UnfinishedStudies"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/Pasante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/UniversityIntern"
            app:layout_constraintStart_toStartOf="parent" />

        <RadioButton
            android:id="@+id/Titulado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FinishedStudies"
            app:layout_constraintStart_toStartOf="parent" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="440dp" />

    <CheckBox
        android:id="@+id/ckRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckRead"
        android:layout_marginStart="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/ckSport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckSport"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/ckRead" />

    <CheckBox
        android:id="@+id/ckTravel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckTravel"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/ckSport" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchFinancialAssistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="10dp"
        android:text="@string/text_Financial_Assistance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2"/>

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/btnOk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchFinancialAssistance"/>





</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>