<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FormActivity">


        <ImageView
            android:id="@+id/imageViewE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/text_image_description"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_my_formE"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView_my_formE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/text_my_form"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtNameE"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/text_hint_name"
            android:maxLength="20"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewE" />

        <EditText
            android:id="@+id/edtLastNameE"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/text_hint_lastname"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtNameE" />

        <Spinner
            android:id="@+id/spinnerGenderE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:entries="@array/genders"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtLastNameE" />

        <RadioGroup
            android:id="@+id/rdDegreeE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtLastNameE">

            <RadioButton
                android:id="@+id/TruncoE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UnfinishedStudies"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioButton
                android:id="@+id/PasanteE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UniversityIntern"
                app:layout_constraintStart_toStartOf="parent" />

            <RadioButton
                android:id="@+id/TituladoE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FinishedStudies"
                app:layout_constraintStart_toStartOf="parent" />
        </RadioGroup>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="440dp" />

        <CheckBox
            android:id="@+id/ckReadE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ckRead"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="@id/guidelineE"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:id="@+id/ckSportE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ckSport"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="@id/guidelineE"
            app:layout_constraintStart_toEndOf="@id/ckReadE" />

        <CheckBox
            android:id="@+id/ckTravel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ckTravel"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="@id/guidelineE"
            app:layout_constraintStart_toEndOf="@id/ckSportE" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchFinancialAssistanceE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:layout_marginEnd="10dp"
            android:text="@string/text_Financial_Assistance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guidelineE"/>

        <Button
            android:id="@+id/btnOkE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/text_Edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/switchFinancialAssistanceE"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>